former-apps/attestation/attestation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: attestation
spec:
  type: ClusterIP
  selector:
    app: attestation
  ports:
    - name: attestation
      port: 3000
      targetPort: 3000
