former-apps/attestation/attestation-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attestation-ext

  labels:
    type: external
spec:
  tls:
    - hosts:
        - attestation.former-hostname.com
      secretName: attestation.former-hostname.com
  rules:
    - host: attestation.former-hostname.com
      http:
        paths:
          - backend:
              service:
                name: attestation
                port:
                  number: 3000
            path: /
            pathType: Prefix
